--- a/meeting/docker-compose.yml
+++ b/meeting/docker-compose.yml
@@ -5,15 +5,15 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_PASSWORD=root
-      - MYSQL_DATABASE=aightdatabase
+      - MYSQL_DATABASE=testdb
     ports:
       - "3307:3306"
   springboot-docker-container:
-    image: alight/meeting
+    image: meeting
     ports:
       - "8082:8082"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql-standalone:3306/alightdatabase?autoReconnect=true&useSSL=false
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql-standalone:3306/testdb?autoReconnect=true&useSSL=false
       SPRING_DATASOURCE_USERNAME: "root"
       SPRING_DATASOURCE_PASSWORD: "root"
     build:
