--- a/meeting/src/main/resources/application.properties
+++ b/meeting/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysql-standalone:3306/alightdatabase?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
+
+spring.datasource.url = jdbc:mysql://localhost:3306/alightdatabase
+spring.datasource.username = root
+spring.datasource.password =
+spring.datasource.initialization-mode=always
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 server.port=9022
