--- a/user-ms/src/main/resources/application.properties
+++ b/user-ms/src/main/resources/application.properties
@@ -1,16 +1,15 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/alightdatabase
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url = jdbc:mysql://localhost:3306/alightdatabase
+spring.datasource.username = root
+spring.datasource.password =
+spring.datasource.platform=mysql
+spring.datasource.initialization-mode=always
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.application.name=users-ms
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
 server.port=9002
 management.endpoints.web.exposure.include=*
-
-
-
-
-
-
+spring.application.name=user
+spring.profiles.active=prod
+spring.config.import=optional:configserver:http://localhost:8888/
